# Kvdroid

./: .gitignore  LICENSE  MANIFEST  README.md  __init__.py  kvdroid.py  pyproject.toml  setup.py
demo/android_native_ui/: buildozer.spec  main.py
demo/kivy_ui/: buildozer.spec  kvdroid.kv  main.py
demo/kivy_ui/behavior/: __init__.py
demo/kivy_ui/tools/: __init__.py
kvdroid/: __init__.py  app.py  appsource.py  audio.py  audioplayer.py  base.py  cast.py  contact.py  darkmode.py  devicelang.py  event.py  metrics.py  network.py  networkstate.py  notification.py  path.py  sdcard.py  webkit.py
kvdroid/jclass/: __init__.py
kvdroid/jclass/android/: R.py  __init__.py  app.py  graphics.py  media.py  os.py  provider.py  view.py  webkit.py  widget.py
kvdroid/jclass/androidx/: __init__.py
kvdroid/jclass/java/: __init__.py  io.py  lang.py  net.py  nio.py  text.py  util.py
kvdroid/jinterface/: activity.py  media.py  media3.py  view.py
kvdroid/tools/: __init__.py  appsource.py  audio.py  broadcast.py  call.py  contact.py  customtabs.py  darkmode.py  deviceinfo.py  display.py  email.py  exoplayer.py  font.py  graphic.py  graphics.py  iso.py  kivytools.py  lang.py  metrics.py  network.py  notification.py  package.py  path.py  photo_picker.py  sms.py  storage.py  uri.py  vibration.py  webkit.py
kvdroid/util/: __init__.py  image.py
pyandroidkx/: __init__.py  cast.py
pyandroidkx/jimplement/: __init__.py  appsource.py  audio.py  call.py  contact.py  customtabs.py  darkmode.py  deviceinfo.py  lang.py  metrics.py  network.py  notification.py  path.py  webkit.py
(+68 files in other folders)
